cambie fuente de imagenes

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" type="image/ico" href="favicon.ico">
+
 
 
 
@@ -49,7 +51,7 @@
         </div>
         <!---### Imagen presentacion###-->
         <div class="imagen.chica">
-            <img src="../Portfolia Ada/Imagenes/monocromo.gif" alt="gif">
+            <img src="imagenes/monocromo.gif" alt="gif">
         </div>
         <!---### Boton presentacion###-->
         <div class="middle">
@@ -174,7 +176,7 @@
     <footer>
         <nav class="footer-nav ">
             <ul class="footer-nav-menu ">
-                <li class="Navegador footer ">
+                <li class="footer-nav-item">
                     <a href="#sobre " class="footer-nav-link ">HOLA</a>
                 </li>
                 <li class="footer-nav-item ">
@@ -195,17 +197,17 @@
                 <i class="fab fa-twitter"></i>
             </li>
             <li class="footer-item-redes ">
-                <a href=" " class="footer-social-link github-link ">
+                <a href=" " class="icono-redes ">
                     <i class="fab fa-github-alt"></i>
                 </a>
             </li>
             <li class="footer-item-redes ">
-                <a href=" " class="footer-social-link linkedin-link ">
+                <a href=" " class="icono-redes ">
                     <i class="fab fa-linkedin-in"></i>
                 </a>
             </li>
             <li class="footer-item-redes ">
-                <a href=" " class="footer-social-link email-link ">
+                <a href=" " class="icono-redes">
                     <i class="far fa-envelope"></i>
                 </a>
             </li>
