cambio de imagenes

--- a/index.html
+++ b/index.html
@@ -132,37 +132,37 @@
     <!---### Continuacion presentacion, cajas proyectos###-->
     <div class="proyecto-cuadros">
         <div class="contenidos">
-            <img src="../Portfolia Ada/imagenes/miweb.png" alt="tarjetas">
+            <img src="imagenes/miweb.png" alt="tarjetas">
             <p class="titulo.tarjetas">Portfolio</p>
         </div>
         <div class="contenidos">
-            <img src="../Portfolia Ada/imagenes/carrito.png" alt="tarjetas">
+            <img src="imagenes/carrito.png" alt="tarjetas">
             <p class="titulo.tarjetas"> Tienda</p>
         </div>
         <div class="contenidos">
-            <img src="../Portfolia Ada/imagenes/gummy-sega-mega-drive.svg" alt="tarjetas">
+            <img src="imagenes/gummy-sega-mega-drive.svg" alt="tarjetas">
             <p class="titulo.tarjetas"> Juegos</p>
         </div>
 
         <div class="contenidos">
-            <img src="../Portfolia Ada/imagenes/pixeltrue-teaching.svg" alt="tarjetas">
+            <img src="imagenes/pixeltrue-teaching.svg" alt="tarjetas">
             <p class="titulo.tarjetas"> Coordinador de reuniones </p>
 
         </div>
         <div class=" contenidos">
-            <img src="../Portfolia Ada/imagenes/celus.png" alt="tarjetas">
+            <img src="imagenes/celus.png" alt="tarjetas">
             <p class="titulo.tarjetas"> Todo Aplicaciones</p>
 
         </div>
 
         <div class="contenidos">
-            <img src="../Portfolia Ada/imagenes/chanchito.svg" alt="tarjetas">
+            <img src="imagenes/chanchito.svg" alt="tarjetas">
             <p class="titulo.tarjetas">Administrador de gastos</p>
 
         </div>
 
         <div class="contenidos">
-            <img src="../Portfolia Ada/imagenes/gatitos.png" alt="tarjetas">
+            <img src="imagenes/gatitos.png" alt="tarjetas">
             <p class="titulo.tarjetas">Buscador de peliculas</p>
 
         </div>
