--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         <div class="middle">
             <a href="" class="btn btn1">Lo que hago</a>
         </div>
+        <button class="nuevo-boton">Lo que hago</button>
     </section>
 
 
