--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!---### Comienzo Header###-->
     <header>
         <nav>
-
+            <!---### Barra Nav/Menu Hamburguesa###-->
             <ul class="barra">
                 <div class="menu-hamburguesa"> <i class="fas fa-bars"></i></div>
                 <li><a href="#">Hola</a></li>
@@ -57,6 +57,7 @@
         <div class="middle">
             <a href="" class="btn btn1">Lo que hago</a>
         </div>
+        <!---### Botón alternativo media query###-->
         <button class="nuevo-boton">Lo que hago</button>
     </section>
 
@@ -67,6 +68,7 @@
         </h2>
         <p class="descripcion"> Lorem ipsum dolor, sit amet consectetur adipisicing elit Lorem ipsum dolor <br> sit amet consectetur adipisicing elit. Alias dignissimos repellendus
         </p>
+        <!---### Cajas conocimientos###-->
         <div class="cajitas">
             <div class="contenido">
                 <i class="devicon-git-plain colored"></i>
@@ -100,8 +102,6 @@
         </div>
     </div>
 
-
-
     <!---### Seccion Frase###-->
     <div class="main-cita">
         <section class="cita">
@@ -111,7 +111,7 @@
                 <p class="quote"> Los viejos lazos sociales se están enredando y rompiendo. </p>
 
                 <p class="quote"> Y tendemos hacia una nuevas relaciones ideológicas entre hombres y mujeres" </p>
-
+                <!---### Parrafo autor###-->
                 <p class="autor">Lenin sobre la cuestión femenina- Clara Zetkin</p>
             </div>
     </div>
@@ -191,7 +191,7 @@
                 </li>
             </ul>
         </nav>
-
+        <!---### Iconos redes sociales###-->
         <ul class="footer-links-redes ">
             <li class="footer-item-redes ">
                 <a href=" " class="icono-redes "></a>
@@ -213,7 +213,7 @@
                 </a>
             </li>
 
-
+            <!---### Firma###-->
         </ul>
         <p>Hecho por Lenina 👾</p>
     </footer>
