--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
                 <p class="quote"> Y tendemos hacia una nuevas relaciones ideológicas entre hombres y mujeres" </p>
                 <!---### Parrafo autor###-->
-                <p class="autor">Lenin sobre la cuestión femenina- Clara Zetkin</p>
+                <p class="autor"> Clara Zetkin</p>
             </div>
     </div>
 
