Cambios en quote y otras secciones

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Pathway+Gothic+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=BenchNine&family=Pathway+Gothic+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@master/devicon.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap" rel="stylesheet">
 
 
 
@@ -28,7 +29,8 @@
 
     <!---### Comienzo Header###-->
     <aside>
-        <div class="container hidden">
+        <div class="container hidden
+        ">
             <div class="hamburger">
                 <div class="line"></div>
                 <div class="line"></div>
@@ -89,63 +91,102 @@
 
 
     <!---### Comienzo Cajas conocimientos###-->
-    <div class="contenedor" id="conocimientos"></div>>
-    <h2> Mis conocimientos
-    </h2>
-    <p class="descripcion"> Lorem ipsum dolor, sit amet consectetur adipisicing elit Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias dignissimos repellendus </p>
+    <div class="contenedor" id="conocimientos">
+        <h2> Mis conocimientos
+        </h2>
+        <p class="descripcion"> Lorem ipsum dolor, sit amet consectetur adipisicing elit Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias dignissimos repellendus </p>
 
-    <!---### Cajas conocimientos###-->
-    <div class="cajitas">
-        <div class="contenido">
-            <i class="devicon-git-plain colored"></i>
-            <p class="parrafo.contenido"> Git</p>
+        <!---### Cajas conocimientos###-->
+        <!-- <div class="cajitas">
+            <div class="contenido">
+                <i class="devicon-git-plain colored"></i>
+                <p class="parrafo.contenido"> Git</p>
+            </div>
+            <div class="contenido">
+                <i class="devicon-react-original colored"></i>
+                <p class="parrafo.contenido"> React</p>
+
+            </div>
+            <div class="contenido">
+                <i class="devicon-html5-plain-wordmark colored"></i>
+                <p class="parrafo.contenido"> HTML 5</p>
+            </div>
+
+            <div class="contenido">
+                <i class="devicon-javascript-plain colored"></i>
+                <p class="parrafo.contenido"> Javascript</p>
+
+            </div>
+            <div class="contenido">
+                <i class="devicon-sass-original colored"></i>
+                <p class="parrafo.contenido"> Sass</p>
+
+            </div>
+            <div class="contenido">
+                <i class="devicon-css3-plain-wordmark colored"></i>
+                <p class="parrafo.contenido">Css 3</p>
+
+            </div>
         </div>
-        <div class="contenido">
-            <i class="devicon-react-original colored"></i>
-            <p class="parrafo.contenido"> React</p>
+    </div> -->
 
+        <div class="cajitas">
+            <div class="contenido">
+                <i class="devicon-github-plain-wordmark"></i>
+
+
+            </div>
+            <div class="contenido">
+                <i class="devicon-css3-plain-wordmark"></i>
+
+
+
+            </div>
+            <div class="contenido">
+                <i class="devicon-javascript-plain colored"></i>
+
+            </div>
+
+            <div class="contenido">
+                <i class="devicon-react-original-wordmark"></i>
+
+
+            </div>
+            <div class=" contenido">
+                <i class="devicon-sass-original colored"></i>
+
+
+            </div>
+
+            <div class="contenido">
+                <i class="devicon-html5-plain-wordmark colored"></i>
+
+
+            </div>
         </div>
-        <div class="contenido">
-            <i class="devicon-html5-plain-wordmark colored"></i>
-            <p class="parrafo.contenido"> HTML 5</p>
-        </div>
 
-        <div class="contenido">
-            <i class="devicon-javascript-plain colored"></i>
-            <p class="parrafo.contenido"> Javascript</p>
 
-        </div>
-        <div class="contenido">
-            <i class="devicon-sass-original colored"></i>
-            <p class="parrafo.contenido"> Sass</p>
 
-        </div>
-        <div class="contenido">
-            <i class="devicon-css3-plain-wordmark colored"></i>
-            <p class="parrafo.contenido">Css 3</p>
 
-        </div>
-    </div>
-    </div>
-
-    <!---### Seccion Frase###-->
+    </div <!---### Seccion Frase###-->
     <div class="main-cita">
         <section class="cita">
             <div class="contenedor-cita">
-                <p class="quote">"El viejo mundo de los sentimientos y los pensamientos </p>
-                <p class="quote"> ha comenzado a tambalearse. </p>
-                <p class="quote"> Los viejos lazos sociales se están enredando y rompiendo. </p>
+                <blockquote>
+                    <p>“Que nada nos defina. Que nada nos sujete. Que sea la libertad nuestra propia sustancia”</p>
 
-                <p class="quote"> Y tendemos hacia una nuevas relaciones ideológicas entre hombres y mujeres" </p>
+                    <p>- Simone de Beauvoir
+
+                </blockquote>
                 <!---### Parrafo autor###-->
-                <p class="autor"> Clara Zetkin</p>
+
             </div>
+            <section>
     </div>
 
-    </section>
-    </section>
+
     <!---### Comienzo seccion proyectos botones###-->
-    </section>
+
     <section class="seccion-proyecto" id=proyecto>
 
         <h3 class="seccion-titulo">Mis proyectos</h3>
